[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "PDFColorSeparator"
version = "0.1.0"
author = "Zuiho"
author_email = "sxlllslgh@gmail.com"
description = "A tool to separate black and color content in PDF."
long_description = "file: README.md"
long_description_content_type = "text/markdown; charset=UTF-8"
url = "https://github.com/sxlllslgh/PDFColorSeparator"
license = "GPLv3"
license_files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

packages = find:
package_dir = "PDFColorSeparator"

install_requires = {
    "pymupdf"
}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]